--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
   },
   "dependencies": {
     "antd": "^5.21.6",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
