--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "typecheck": "tsc --project tsconfig.json --noEmit"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.4",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
