--- a/client/package.json
+++ b/client/package.json
@@ -24,12 +24,14 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@ant-design/icons": "^5.5.1",
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
